create multiple functions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="message-container waiting-message">
         <div class="typing_loader"></div>
-        <p>Waiting for Player 2</p>
+        <p></p>
     </div>
     <div class="message-container countdown-message">
         <p>Game starting in <span class="countdown-number"></span>...</p>
@@ -32,9 +32,8 @@
             <h1>0</h1>
         </div>
         <div class="words__main-wrap">
-            <div class="words__container">
-                <textarea class="words__textarea"></textarea>
-            </div>
+            <div class="words__container"></div>
+            <textarea class="words__textarea"></textarea>
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
