--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Speedtyper</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/themes.css">
     <!-- <link rel="stylesheet" href="./css/themes.css">
     <link rel="icon" href="./icons/logo.svg"> -->
     <meta charset="UTF-8">
@@ -224,6 +225,7 @@
 <!-- <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.3/dist/confetti.browser.min.js"></script> -->
 <!-- <script src="./script/main.js"></script> -->
 <script src="/socket.io/socket.io.js"></script>
+<script src="./chart.min.js"></script>
 <script src="./game.js"></script>
 
 </html>
