--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,11 +27,6 @@
                 <p class="keyboard-layout" data-tooltip="keyboard language"></p>
             </div>
             <div class="header__buttons">
-                <div class="btn__container keyboardBtn"><svg class="keyboard" width="33" height="21" viewBox="0 0 33 21" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M31.1255 0H1.87454C0.842869 0 0 0.836126 0 1.87454V19.0421C0 20.0738 0.836126 20.9166 1.87454 20.9166H31.1255C32.1571 20.9166 33 20.0805 33 19.0421V1.87454C32.9933 0.836126 32.1571 0 31.1255 0ZM20.6267 3.93788C20.6267 3.68165 20.8357 3.47262 21.0919 3.47262H23.0002C23.2564 3.47262 23.4655 3.68165 23.4655 3.93788V5.81242C23.4655 6.06865 23.2564 6.27768 23.0002 6.27768H21.0919C20.8357 6.27768 20.6267 6.06865 20.6267 5.81242V3.93788ZM18.3071 9.02881H20.2154C20.4716 9.02881 20.6806 9.23784 20.6806 9.49407V11.3686C20.6806 11.6248 20.4716 11.8339 20.2154 11.8339H18.3071C18.0509 11.8339 17.8418 11.6248 17.8418 11.3686V9.49407C17.8418 9.23784 18.0509 9.02881 18.3071 9.02881ZM15.084 3.93788C15.084 3.68165 15.293 3.47262 15.5492 3.47262H17.4575C17.7137 3.47262 17.9228 3.68165 17.9228 3.93788V5.81242C17.9228 6.06865 17.7137 6.27768 17.4575 6.27768H15.5492C15.293 6.27768 15.084 6.06865 15.084 5.81242V3.93788ZM12.7577 9.02881H14.6659C14.9221 9.02881 15.1312 9.23784 15.1312 9.49407V11.3686C15.1312 11.6248 14.9221 11.8339 14.6659 11.8339H12.7577C12.5014 11.8339 12.2924 11.6248 12.2924 11.3686V9.49407C12.2924 9.23784 12.5014 9.02881 12.7577 9.02881ZM9.53453 3.93788C9.53453 3.68165 9.74356 3.47262 9.9998 3.47262H11.9081C12.1643 3.47262 12.3733 3.68165 12.3733 3.93788V5.81242C12.3733 6.06865 12.1643 6.27768 11.9081 6.27768H9.9998C9.74356 6.27768 9.53453 6.06865 9.53453 5.81242V3.93788ZM3.95811 3.93788C3.95811 3.68165 4.16714 3.47262 4.42338 3.47262H6.33163C6.58786 3.47262 6.79689 3.68165 6.79689 3.93788V5.81242C6.79689 6.06865 6.58786 6.27768 6.33163 6.27768H4.42338C4.16714 6.27768 3.95811 6.06865 3.95811 5.81242V3.93788ZM6.79689 16.9787C6.79689 17.235 6.58786 17.444 6.33163 17.444H4.42338C4.16714 17.444 3.95811 17.235 3.95811 16.9787V15.1042C3.95811 14.848 4.16714 14.6389 4.42338 14.6389H6.33163C6.58786 14.6389 6.79689 14.848 6.79689 15.1042V16.9787ZM9.0895 11.8339H7.18124C6.92501 11.8339 6.71598 11.6248 6.71598 11.3686V9.49407C6.71598 9.23784 6.92501 9.02881 7.18124 9.02881H9.0895C9.34573 9.02881 9.55476 9.23784 9.55476 9.49407V11.3686C9.55476 11.6248 9.34573 11.8339 9.0895 11.8339ZM23.4655 16.9787C23.4655 17.235 23.2564 17.444 23.0002 17.444H22.4271H21.0987H17.4642H15.556H10.0065C9.75031 17.444 9.54128 17.235 9.54128 16.9787V15.1042C9.54128 14.848 9.75031 14.6389 10.0065 14.6389H15.556H17.4642H21.0987H22.4271H23.0002C23.2564 14.6389 23.4655 14.848 23.4655 15.1042V16.9787ZM25.7581 11.8339H23.8498C23.5936 11.8339 23.3846 11.6248 23.3846 11.3686V9.49407C23.3846 9.23784 23.5936 9.02881 23.8498 9.02881H25.7581C26.0143 9.02881 26.2233 9.23784 26.2233 9.49407V11.3686C26.2233 11.6248 26.0143 11.8339 25.7581 11.8339ZM29.0419 16.9787C29.0419 17.235 28.8329 17.444 28.5766 17.444H26.6684C26.4121 17.444 26.2031 17.235 26.2031 16.9787V15.1042C26.2031 14.848 26.4121 14.6389 26.6684 14.6389H28.5766C28.8329 14.6389 29.0419 14.848 29.0419 15.1042V16.9787ZM29.0419 5.81242C29.0419 6.06865 28.8329 6.27768 28.5766 6.27768H26.6684C26.4121 6.27768 26.2031 6.06865 26.2031 5.81242V3.93788C26.2031 3.68165 26.4121 3.47262 26.6684 3.47262H28.5766C28.8329 3.47262 29.0419 3.68165 29.0419 3.93788V5.81242Z" fill="#222222" />
-                    </svg>
-                    <p data-tooltip="ALT+K">Keyboard</p>
-                </div>
                 <div class="btn__container settingsBtn"><svg class="cog__icon" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M14.795 2.49864C14.2534 -0.277322 10.2817 -0.277321 9.74019 2.49864C9.41064 4.18785 7.54864 5.08454 6.0225 4.28898C3.51451 2.98161 1.03822 6.08677 2.8709 8.24096C3.9861 9.55182 3.52623 11.5667 1.9527 12.2638C-0.633149 13.4095 0.250628 17.2816 3.07749 17.1919C4.79768 17.1373 6.08623 18.7531 5.65022 20.418C4.9337 23.154 8.51204 24.8772 10.2044 22.6112C11.2342 21.2322 13.3009 21.2322 14.3307 22.6112C16.0231 24.8772 19.6014 23.154 18.8849 20.418C18.4489 18.7531 19.7375 17.1373 21.4577 17.1919C24.2845 17.2816 25.1683 13.4095 22.5824 12.2638C21.0089 11.5667 20.549 9.55182 21.6643 8.24096C23.4969 6.08677 21.0206 2.98161 18.5127 4.28898C16.9865 5.08454 15.1245 4.18785 14.795 2.49864ZM12.2676 16.1269C14.2696 16.1269 15.8926 14.5039 15.8926 12.5019C15.8926 10.4999 14.2696 8.8769 12.2676 8.8769C10.2655 8.8769 8.64257 10.4999 8.64257 12.5019C8.64257 14.5039 10.2655 16.1269 12.2676 16.1269Z" fill="#222222" />
                     </svg>
@@ -57,7 +52,14 @@
                 <h1></h1>
             </div>
             <div class="words__main-wrap">
-                <div class="words__container"></div><textarea class="words__textarea"></textarea>
+                <div class="words__container"></div>
+                <textarea class="words__textarea"></textarea>
+                <div class="animation__container">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
                 <div class="words__blurred"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512 512" width="512" height="512">
                         <g>
                             <path d="M502.9,304.834L188.481,168.779c-5.64-2.388-12.173-1.143-16.509,3.193s-5.596,10.869-3.193,16.509l136.055,314.422   c2.388,5.552,7.837,9.097,13.799,9.097c0.439,0,0.894-0.015,1.362-0.059c6.475-0.586,11.836-5.288,13.271-11.631l31.553-135.491   l135.488-31.553c6.343-1.436,11.045-6.797,11.631-13.271S508.877,307.397,502.9,304.834z" />
@@ -71,68 +73,6 @@
                     <p>Click here or press key to resume</p>
                 </div>
             </div>
-            <div class="words__reload"></div>
-            <div class="words__keyboard">
-                <div class="words__keyboard-line">
-                    <p class="key tilda">`~</p>
-                    <p class="key one">1!</p>
-                    <p class="key two">2@</p>
-                    <p class="key three">3#</p>
-                    <p class="key four">4$</p>
-                    <p class="key five">5%</p>
-                    <p class="key six">6^</p>
-                    <p class="key seven">7&</p>
-                    <p class="key eight">8*</p>
-                    <p class="key nine">9(</p>
-                    <p class="key zero">0)</p>
-                    <p class="key minus">-_</p>
-                    <p class="key plus">=+</p>
-                </div>
-                <div class="words__keyboard-line">
-                    <p class="key q">q</p>
-                    <p class="key w">w</p>
-                    <p class="key e">e</p>
-                    <p class="key r">r</p>
-                    <p class="key t">t</p>
-                    <p class="key y">y</p>
-                    <p class="key u">u</p>
-                    <p class="key i">i</p>
-                    <p class="key o">o</p>
-                    <p class="key p">p</p>
-                    <p class="key squareArrowLeft">[{</p>
-                    <p class="key squareArrowRight">]}</p>
-                </div>
-                <div class="words__keyboard-line">
-                    <p class="key a">a</p>
-                    <p class="key s">s</p>
-                    <p class="key d">d</p>
-                    <p class="key f">f</p>
-                    <p class="key g">g</p>
-                    <p class="key h">h</p>
-                    <p class="key j">j</p>
-                    <p class="key k">k</p>
-                    <p class="key l">l</p>
-                    <p class="key semicolon">;:</p>
-                    <p class="key apostrophe">' "</p>
-                </div>
-                <div class="words__keyboard-line">
-                    <p class="key z">z</p>
-                    <p class="key x">x</p>
-                    <p class="key c">c</p>
-                    <p class="key v">v</p>
-                    <p class="key b">b</p>
-                    <p class="key n">n</p>
-                    <p class="key m">m</p>
-                    <p class="key comma">
-                        <,< /p> <p class="key dot">.>
-                    </p>
-                    <p class="key slashkey">/ ?</p>
-                </div>
-                <div class="words__keyboard-line">
-                    <p class="key space">qwerty</p>
-                </div>
-            </div>
-            <div class="words__keyHelper"></div>
         </div>
         <footer class="footer">
             <div class="footer__link">
