--- a/frontend/index.html
+++ b/frontend/index.html
@@ -151,28 +151,31 @@
     </div>
     <div class="message-container waiting-message">
         <div class="typing_loader"></div>
-        <p></p>
+        <p>Waiting for Player 2</p>
     </div>
     <div class="message-container countdown-message">
         <p>Game starting in <span class="countdown-number"></span>...</p>
+        <div class="countdown-message__line"></div>
     </div>
     <div class="message-container game-full">
         <p>Game is Full</p>
     </div>
     <div class="pop__up">
-        <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+     <!--    <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M30 60C46.5685 60 60 46.5685 60 30C60 13.4315 46.5685 0 30 0C13.4315 0 0 13.4315 0 30C0 46.5685 13.4315 60 30 60ZM45.7591 21.8542C46.5237 21.0571 46.4973 19.791 45.7002 19.0264C44.903 18.2618 43.637 18.2881 42.8723 19.0853L26.1252 36.5449L17.3897 28.0977C16.5956 27.3299 15.3295 27.3512 14.5617 28.1452C13.7938 28.9392 13.8151 30.2054 14.6091 30.9732L24.7882 40.8163C25.1706 41.186 25.6844 41.3882 26.2161 41.3782C26.7479 41.3682 27.2537 41.1468 27.6219 40.763L45.7591 21.8542Z" fill="#222222" />
-        </svg>
+        </svg> -->
         <p class="pop__up-text"></p>
         <div class="pop__up-line"></div>
     </div>
+
+    <p class="alt-text"></p>
 </body>
 <!-- <script src="./script/chart.min.js"></script>
 <script src="./script/dom2image.min.js"></script> -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.3/dist/confetti.browser.min.js"></script> -->
 <!-- <script src="./script/main.js"></script> -->
 <script src="/socket.io/socket.io.js"></script>
 <script src="./chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.3/dist/confetti.browser.min.js"></script>
 <script src="./game.js"></script>
 <script src="./dom2image.min.js"></script>
 
