--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,6 +73,20 @@
                     <p>Click here or press key to resume</p>
                 </div>
             </div>
+            <div class="words__main-progress">
+                <div class="player__one">
+                    <div class="player__one-wrap">
+                        <p>You</p>
+                        <img src="./assets/car.svg" alt="">
+                    </div>
+                </div>
+                <div class="player__two">
+                    <div class="player__two-wrap">
+                        <p>Opponent</p>
+                        <img src="./assets/car.svg" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
         <footer class="footer">
             <div class="footer__link">
