--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,12 +79,16 @@
                         <p>You</p>
                         <img src="./assets/car.svg" alt="">
                     </div>
+
+                    <p class="player__one-wpm">0 wpm</p>
                 </div>
                 <div class="player__two">
                     <div class="player__two-wrap">
                         <p>Opponent</p>
-                        <img src="./assets/car.svg" alt="">
+                        <img src="./assets/car2.svg" alt="">
                     </div>
+
+                    <p class="player__two-wpm">0 wpm</p>
                 </div>
             </div>
         </div>
@@ -152,6 +156,13 @@
         </div>
         <div class="results__history"></div>
         <div class="buttons">
+
+            <div class="restart" data-tooltip="rematch (Tab)">
+                <svg width="19" height="19" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16.9282 15C14.7191 18.8264 9.82636 20.1374 6.00002 17.9282C2.17368 15.7191 0.862677 10.8264 3.07182 7.00003C5.28096 3.17369 10.1737 1.86269 14 4.07183L16.5981 5.57183M16.5981 5.57183L15.5 1.47375M16.5981 5.57183L12.5 6.66991" stroke="#222222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </div>
+
             <div class="history" data-tooltip="show words history"><svg width="19" height="16" viewBox="0 0 19 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 8H17" stroke="#222222" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" />
                     <path d="M2 14H14" stroke="#222222" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" />
@@ -175,13 +186,10 @@
         <p>Game is Full</p>
     </div>
     <div class="pop__up">
-        <!-- <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M30 60C46.5685 60 60 46.5685 60 30C60 13.4315 46.5685 0 30 0C13.4315 0 0 13.4315 0 30C0 46.5685 13.4315 60 30 60ZM45.7591 21.8542C46.5237 21.0571 46.4973 19.791 45.7002 19.0264C44.903 18.2618 43.637 18.2881 42.8723 19.0853L26.1252 36.5449L17.3897 28.0977C16.5956 27.3299 15.3295 27.3512 14.5617 28.1452C13.7938 28.9392 13.8151 30.2054 14.6091 30.9732L24.7882 40.8163C25.1706 41.186 25.6844 41.3882 26.2161 41.3782C26.7479 41.3682 27.2537 41.1468 27.6219 40.763L45.7591 21.8542Z" fill="#222222" />
-        </svg> -->
+        <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg"></svg>
         <p class="pop__up-text"></p>
         <div class="pop__up-line"></div>
     </div>
-
     <p class="alt-text"></p>
 </body>
 <!-- <script src="./script/chart.min.js"></script>
