--- a/frontend/index.html
+++ b/frontend/index.html
@@ -191,6 +191,12 @@
         <div class="pop__up-line"></div>
     </div>
     <p class="alt-text"></p>
+
+    <div class="traffic__light">
+        <div class="circle red"></div>
+        <div class="circle yellow"></div>
+        <div class="circle green"></div>
+    </div>
 </body>
 <!-- <script src="./script/chart.min.js"></script>
 <script src="./script/dom2image.min.js"></script> -->
